[project]
name = "iavl-bench"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "humanfriendly>=10.0",
    "matplotlib>=3.10.6",
    "notebook>=7.4.5",
    "pandas>=2.3.2",
    "polars>=1.33.0",
    "streamlit>=1.49.0",
]
