[project]
name = "iavl-bench"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altair>=5.5.0",
    "duckdb>=1.3.2",
    "humanfriendly>=10.0",
    "matplotlib>=3.10.6",
    "notebook>=7.4.5",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "polars[pyarrow]>=1.33.0",
    "streamlit>=1.49.0",
    "vegafusion[embed]>=1.6.9",
    "vegafusion-jupyter>=1.6.9",
]
